# MineCase

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  NuGet.config  README-zh.md  README.md  Readme-zh.md  Readme.md  appveyor.yml  azure-pipelines.yml  build.bat  build_and_run.bat  build_and_run.sh  run_gateway.bat  run_server.bat
src/: CMakeLists.txt  MineCase.sln  NuGet.config
src/MineCase.Algorithm/: Collision.cs  Collsion.cs  CraftingRecipeMatcher.cs  DropBlockMappingMatcher.cs  FurnaceRecipeMatcher.cs  MathHelper.cs  MineCase.Algorithm.csproj  UniformRNG.cs
src/MineCase.Basic/: Angle.cs  BatchBlockChange.cs  BoundingBox.cs  Chat.cs  Difficulty.cs  GameMode.cs  MineCase.Basic.csproj  Object.cs  PlayerDiggingFace.cs  Position.cs  Slot.cs  VarInt.cs
src/MineCase.Client.Engine/: DependencyObject.Client.cs  EngineModule.cs  EventAggregator.cs  EventAggregatorExtensions.cs  Execute.cs  IEventAggregator.cs  IHandle.cs  IHandleEvent.cs  KeepAliveLazy.cs  MineCase.Client.Engine.csproj  MultiValueDictionary.cs  SmartBehaviour.cs
src/MineCase.Client.Scripts/: AppBootstrapper.cs  GameBootstrapper.cs  InputController.cs  MineCase.Client.Scripts.csproj  PlayerMotor.cs  PlayerMovement.cs  ServerManager.cs  ThirdPersionCameraController.cs  ThirdPersonCameraController.cs
src/MineCase.ControlPanel/: MineCase.ControlPanel.csproj  Program.cs  Startup.cs  appsettings.json  npm-shrinkwrap.json  package.json
src/MineCase.Core/: Block.cs  BoundingBox.cs  Class1.cs  ClickAction.cs  ClientboundAnimationId.cs  CraftingRecipeLoader.cs  Dimension.cs  DropBlockMappingLoader.cs  Entity.cs  EntityUsage.cs  FacingDirection.cs  FindCraftingRecipeResult.cs  FurnaceRecipeLoader.cs  Item.cs  Items.cs  LevelTypes.cs  MineCase.Core.csproj  Minecase.Core.csproj  Object.cs  OpPermissionLevel.cs  Position.cs  ServerVersion.cs  Slot.cs  SwingHandState.cs  VarLong.cs
src/MineCase.Engine/: CaseComponent.cs  CaseContext.cs  CaseEntity.cs  Component.Server.cs  Component.cs  Context.cs  DependencyObject.Server.cs  DependencyObject.cs  DependencyProperty.cs  EngineAssemblyExtensions.cs  Entity.cs  EntityPack.cs  ICleanupSystem.cs  IDependencyObject.cs  IEntityMessage.cs  IHandle.cs  IInitializeSystem.cs  Icomponent.cs  MineCase.Engine.csproj  MineCase.Server.Engine.csproj  PropertyChangedEventArgs.cs  PropertyMetadata.cs
src/MineCase.Gateway/: AppBootstrapper.cs  ClusterClientHostedService.cs  ConnectionRouterClientHostedService.cs  Dockerfile  MineCase.Gateway.csproj  OrleansConfiguration.dev.xml  OrleansConfiguration.docker.xml  Program.cs  config.json  ops.json  server.json
(+4262 files in other folders)
